# anomaly-outlier-detection

./: README.md  pyproject.toml
anomaly_detection/domain/: const.py  errors.py
anomaly_detection/timeSeriesFeatures/: timeSeriesFeatures.py
