[project]
name = "anomaly-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Mooh"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.1"

