[project]
name = "anomaly-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Mooh"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "jax (>=0.6.1,<0.7.0)",
    "flax (>=0.10.6,<0.11.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "chex (>=0.1.89,<0.2.0)",
    "tfp-nightly[jax] (>=0.26.0.dev20250602,<0.27.0)",
    "einops (>=0.8.1,<0.9.0)",
    "distrax (>=0.1.5,<0.2.0)",
    "optax (>=0.2.4,<0.3.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "polars (>=1.30.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.1"

